--- a/match.html
+++ b/match.html
@@ -20,6 +20,8 @@
         Number Of Required Matches: <select class='rm'>
             <option value='2'>2</option>
             <option value='3'>3</option>
+            <option value='4'>4</option>
+            <option value='5'>5</option>
         </select>
     <br>
     <br>
